# numpynet

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_tests.py  setup.py
examples/: xor_example.py
numpy_nn/: __init__.py  activations.py  layers.py  losses.py  network.py
tests/: __init__.py  test_activations.py  test_layers.py  test_losses.py  test_network.py
