[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "numpynet"
version = "0.1.0"
description = "A lightweight, educational deep learning framework built from scratch using only NumPy"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["deep-learning", "neural-network", "numpy", "education", "machine-learning"]
authors = [
    {name = "NumPyNet Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.0.0"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/yusufafify/numpynet"
Documentation = "https://github.com/yusufafify/numpynet#readme"
Repository = "https://github.com/yusufafify/numpynet"
"Bug Reports" = "https://github.com/yusufafify/numpynet/issues"

[tool.setuptools]
packages = ["numpy_nn"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
